# key-toggler

./: CMakeLists.txt  README.md
.github/workflows/: build-windows.yml  validate-branch-build.yml
src/: main.cpp
